--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,8 +40,8 @@
         <li class="nav-item"><a class="nav-link" href="#products">Produits</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">À propos</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-        <li class="nav-item"><a class="nav-link" href="/login.html">Connexion</a></li>
-        <li class="nav-item"><a class="nav-link" href="/register.html">Inscription</a></li>
+        <li class="nav-item"><a class="nav-link" href="login.html">Connexion</a></li>
+        <li class="nav-item"><a class="nav-link" href="register.html">Inscription</a></li>
       </ul>
     </div>
   </div>
